# pyautoppt

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: commit_code.md
pyautoppt/: __init__.py
tests/: test_ppt.py
